Tue, Jan 6, 2009
---------------------------------------------------------------------
- Figured out how to make [has_one :through] work and save the join record.
- Restructured [uses_mysql_uuid] to use proper module nesting and extend base with SingletonMethods.
- Fixes in opportunity/index and contact/delete.
- Created [Contact/New] form (with backend stub).
- Moved common JavaScript functions to application namespace.

Mon, Jan 5, 2009
---------------------------------------------------------------------
- Finished refatoring [Lead/Convert].
- Started with index page for contacts.

Sun, Jan 4, 2009
---------------------------------------------------------------------
- Streamlined [Lead/Convert] to make it use objects and default values.
- Added [assigned_to] to accounts and [access] to opportunities.
- Updated [Account/New] form.

Sat, Jan 3, 2009
---------------------------------------------------------------------
- Refactoring of [Lead/Convert] using [fields_for].

Fri, Jan 2, 2009
---------------------------------------------------------------------
- Implemented backend for [Lead/Convert] - create contact along with optional account and opportunity.
- Fixed [uses_mysql_uuid] to work with AR validations.
- Minor database schema changes.

Thu, Jan 1, 2009 -- Happy New Year!
---------------------------------------------------------------------
- Created [account_contacts], [account_opportunities], and [contact_opportunities] join tables.
- Implemented HTML designs and JavaScript for [Lead/Convert] and [Contact/New] forms (with backend stubs).

Wed, Dec 31, 2008
---------------------------------------------------------------------
- More design work on [Lead/Convert] and [Contact/New] forms.

Tue, Dec 30, 2008
---------------------------------------------------------------------
- Added new view/edit/delete icons, started with [Lead/Convert].
- Minor changes in [opportunities] migration.

Mon, Dec 29, 2008