@@ -5,10 +5,10 @@
     By default only you will have access to the contact. You can change contact permissions later.
   #permissions{ hidden_if(collapsed) }
     .radio_box
-      = f.radio_button :access, "Private", :onclick => "$('people').hide(); $('account_access').value = 'Shared'"
+      = f.radio_button :access, "Private", :onclick => "$('people').hide(); $('account_access').value = 'Private'"
       Keep it private, do not share with others
     .radio_box
-      = f.radio_button :access, "Public", :onclick => "$('people').hide(); $('account_access').value = 'Shared'"
+      = f.radio_button :access, "Public", :onclick => "$('people').hide(); $('account_access').value = 'Public'"
       Share it with everyone
     .radio_box
       = f.radio_button :access, "Shared", :onclick => "$('people').show(); $('account_access').value = 'Shared'"
